fixed responsiveness issues. Everything fits now on smallest screens.

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -31,6 +31,8 @@
         "job3";
 
       grid-template-columns: 1fr;
+
+      max-width: 100vw;
     }
 
     .project {
@@ -50,17 +52,20 @@
   }
 
   .menu-nav {
-    height: 75vh;
+    height: 70vh;
     transform: translate3d(-100%, 0, 0);
     font-size: 24px;
   }
 
   .menu-branding {
-    height: 25vh;
+    height: 30vh;
     transform: translate3d(100%, 0, 0);
 
     .portrait {
-      background: url("../dist/images/portrait_small.jpg");
+      height: 200px;
+      width: 200px;
+      margin-top: 10vh;
+      background: url("../dist/images/small-portrait.jpg");
     }
   }
 }
@@ -69,9 +74,54 @@
 @include mediaSm {
   main#home h1 {
     margin-top: 10vh;
+    font-size: 4rem;
+    justify-content: center;
+
+    span {
+      justify-self: center;
+      display: block;
+      align-self: center;
+    }
   }
 
   .projects {
     grid-template-columns: 1fr;
+  }
+
+  #work {
+    h1 {
+      font-size: 3.5rem;
+    }
+  }
+
+  .menu-nav {
+    height: 50vh;
+    .nav-link {
+      font-size: 1.2rem;
+    }
+  }
+
+  .menu-branding {
+    height: 50vh;
+    .portrait {
+      align-self: center;
+      justify-self: center;
+      align-items: center;
+      justify-content: center;
+      align-content: center;
+      height: 200px;
+      width: 200px;
+      margin-top: 10vh;
+      background: url("../images/small-portrait.jpg");
+    }
+  }
+
+  #about {
+    div {
+      font-size: 1rem;
+    }
+    h1 {
+      font-size: 3rem;
+    }
   }
 }
